deleted classes and just put it all into a body

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="style.css" rel="stylesheet">
     </head>
 
-    <header>
+    <body>
         <img class="header-logo" src="https://avatars.githubusercontent.com/u/133018704?v=4" alt="Mosasaurus from the game: Beast Of Bermuda">
         <ul class="header-links">
         <a href="/" target="_blank">Art Page</a>
@@ -17,40 +17,38 @@
 
         <h1>Dragness' Landing Page</h1>
         <p>Welcome to DragnessRider's landing page! A learner of programming, learning HTML, CSS and JAVASCRIPT. I am also self-taught in art for more than 16 years and love anything dinosaur and most of my art is dinosaur related.</p>
-        <button class="about" href="/" target="_blank">About Me</button>
-        <img class="about-me-img" src="https://images.pexels.com/photos/236482/pexels-photo-236482.jpeg" alt="Back of a skeleton of a random fossil in a museum">
-    </header>
+        <button href="/" target="_blank">About Me</button>
+        <img src="https://images.pexels.com/photos/236482/pexels-photo-236482.jpeg" alt="Back of a skeleton of a random fossil in a museum">
 
-    <body>
         <h1>Things I am able to Do</h1>
 
-        <img class="ability-img" src="https://images.pexels.com/photos/270404/pexels-photo-270404.jpeg" alt="html script on a computer screen">
-        <div class="abilites"><h2>HTML</h2></div>
+        <img src="https://images.pexels.com/photos/270404/pexels-photo-270404.jpeg" alt="html script on a computer screen">
+        <div><h2>HTML</h2></div>
 
-        <img class="ability-img" src="https://images.pexels.com/photos/160107/pexels-photo-160107.jpeg" alt="css script on a computer screen">
-        <div class="abilites"><h2>CSS</h2></div>
+        <img src="https://images.pexels.com/photos/160107/pexels-photo-160107.jpeg" alt="css script on a computer screen">
+        <div><h2>CSS</h2></div>
 
-        <img class="ability-img" src="https://images.pexels.com/photos/360591/pexels-photo-360591.jpeg" alt="javascript on a computer screen">
-        <div class="abilites"><h2>JAVASCRIPT</h2></div>
+        <img src="https://images.pexels.com/photos/360591/pexels-photo-360591.jpeg" alt="javascript on a computer screen">
+        <div><h2>JAVASCRIPT</h2></div>
 
-        <img class="ability-img" src="https://images.pexels.com/photos/542556/pexels-photo-542556.jpeg" alt="paintbrushes in different colored plastic water cups">
-        <div class="abilites"><h2>ART</h2></div>
-    </body>
+        <img src="https://images.pexels.com/photos/542556/pexels-photo-542556.jpeg" alt="paintbrushes in different colored plastic water cups">
+        <div><h2>ART</h2></div>
 
     <section>
         <blockquote cite="Cesar A. Cruz">
         Art should comfort the disturbed and disturb the comfortable.<br>
-        <em class="author">-Cesar A. Cruz</em>
+        <em>-Cesar A. Cruz</em>
         </blockquote>
     </section>
     
     <section>
         <h1>Want to commission me?</h1>
         <p>Thank you so much for being interested in my art and/or dinosaurs! Buy now by clicking that button there!</p>
-        <button class="commission">Commission Info</button>
+        <button>Commission Info</button>
     </section>
 
-    <footer>
         <p>Copyright &copy DragnessRider 2025</p>
-    </footer>
+
+    </body>
+
 </html>
