index and style.css rough draft atm

--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
     </head>
 
     <body>
-        <img class="header-logo" src="https://avatars.githubusercontent.com/u/133018704?v=4" alt="Mosasaurus from the game: Beast Of Bermuda">
-        <ul class="header-links">
+
+        <div class="header">
+        <div class="link-right">
+        <h1>Logo Image</h1>
+        </div>
+        <div class="link-left">
+        <ul>
         <a href="/" target="_blank">Art Page</a>
         <a href="/" target="_blank">Commission Info</a>
         <a href="/" target="_blank">About Me</a>
         </ul>
+        </div>
+        </div>
 
+        <div class="hero">
         <h1>Dragness' Landing Page</h1>
         <p>Welcome to DragnessRider's landing page! A learner of programming, learning HTML, CSS and JAVASCRIPT. I am also self-taught in art for more than 16 years and love anything dinosaur and most of my art is dinosaur related.</p>
         <button href="/" target="_blank">About Me</button>
         <img src="https://images.pexels.com/photos/236482/pexels-photo-236482.jpeg" alt="Back of a skeleton of a random fossil in a museum">
+        </div>
 
         <h1>Things I am able to Do</h1>
 
@@ -45,9 +54,10 @@
         <h1>Want to commission me?</h1>
         <p>Thank you so much for being interested in my art and/or dinosaurs! Buy now by clicking that button there!</p>
         <button>Commission Info</button>
+    
     </section>
 
-        <p>Copyright &copy DragnessRider 2025</p>
+        <div class="footer">Copyright &copy DragnessRider 2025</div>
 
     </body>
 
