restarted index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- fule: index.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,56 +9,6 @@
     </head>
 
     <body>
-
-        <div class="header">
-        <div class="link-right">
-        <h1>Logo Image</h1>
-        </div>
-        <div class="link-left">
-        <ul>
-        <a href="/" target="_blank">Art Page</a>
-        <a href="/" target="_blank">Commission Info</a>
-        <a href="/" target="_blank">About Me</a>
-        </ul>
-        </div>
-        </div>
-
-        <div class="hero">
-        <h1>Dragness' Landing Page</h1>
-        <p>Welcome to DragnessRider's landing page! A learner of programming, learning HTML, CSS and JAVASCRIPT. I am also self-taught in art for more than 16 years and love anything dinosaur and most of my art is dinosaur related.</p>
-        <button href="/" target="_blank">About Me</button>
-        <img src="https://images.pexels.com/photos/236482/pexels-photo-236482.jpeg" alt="Back of a skeleton of a random fossil in a museum">
-        </div>
-
-        <h1>Things I am able to Do</h1>
-
-        <img src="https://images.pexels.com/photos/270404/pexels-photo-270404.jpeg" alt="html script on a computer screen">
-        <div><h2>HTML</h2></div>
-
-        <img src="https://images.pexels.com/photos/160107/pexels-photo-160107.jpeg" alt="css script on a computer screen">
-        <div><h2>CSS</h2></div>
-
-        <img src="https://images.pexels.com/photos/360591/pexels-photo-360591.jpeg" alt="javascript on a computer screen">
-        <div><h2>JAVASCRIPT</h2></div>
-
-        <img src="https://images.pexels.com/photos/542556/pexels-photo-542556.jpeg" alt="paintbrushes in different colored plastic water cups">
-        <div><h2>ART</h2></div>
-
-    <section>
-        <blockquote cite="Cesar A. Cruz">
-        Art should comfort the disturbed and disturb the comfortable.<br>
-        <em>-Cesar A. Cruz</em>
-        </blockquote>
-    </section>
-    
-    <section>
-        <h1>Want to commission me?</h1>
-        <p>Thank you so much for being interested in my art and/or dinosaurs! Buy now by clicking that button there!</p>
-        <button>Commission Info</button>
-    
-    </section>
-
-        <div class="footer">Copyright &copy DragnessRider 2025</div>
 
     </body>
 
