--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- fule: index.html -->
+<!-- file: index.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,7 +9,14 @@
     </head>
 
     <body>
-
+        <main class="landing-page">
+            <section class="header">
+            <div class="logo-img">Logo Image</div>
+            <div class="hero-link"><a href="/">header link one</a> <a href="/">header link two</a> <a href="/">header link three</a> </div>
+            </section>
+            <section class="quote"></section>
+            <section class="footer"></section>
+        </main>
     </body>
 
 </html>
