--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <main class="landing-page">
             <section class="header">
             <div class="logo-img">Logo Image</div>
-            <div class="hero-link"><a href="/">header link one</a> <a href="/">header link two</a> <a href="/">header link three</a> </div>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
             </section>
             <section class="quote"></section>
             <section class="footer"></section>
