--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <main class="landing-page">
             <section class="header">
             <div class="logo-img">Logo Image</div>
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+            <ul class="header-links">
+                <li><a href="/">header link one</a></li>
+                <li><a href="/">header link two</a></li>
+                <li><a href="/">header link three</a></li>
             </ul>
             </section>
             <section class="quote"></section>
