added footer and copyright

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
             </section>
             <section class="quote"></section>
-            <section class="footer"></section>
+            <section class="footer">Copyright &copy; DragnessRider 2025</section>
         </main>
     </body>
 
