--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                 <li><a href="/">header link three</a></li>
             </ul>
             </section>
+            <section class="hero">
+            <h2 class="hero-text">This website is awesome!</h2>
+            <p class="hero-sub-text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+            <button class="sign-up">Sign Up</button>
+            </section>
             <section class="quote"></section>
             <section class="footer">Copyright &copy; DragnessRider 2025</section>
         </main>
