--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             </section>
             
             <section class="quote"></section>
-            <section class="cta"></section>
+            <section class="cta">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </section>
             <section class="footer">Copyright &copy; DragnessRider 2025</section>
         </main>
     </body>
