--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
             </section>
             
             <section class="quote"></section>
-            <section class="cta">
+            <div class="cta">
+            <div class="cta-text">
                 <h3>Call to action! It's time!</h3>
                 <p>Sign up for our product by clicking that button right over there!</p>
-            </section>
+            </div>
+            <div class="cta-button">
+                <button>Sign Up</button>
+            </div>
+            </div>
             <section class="footer">Copyright &copy; DragnessRider 2025</section>
         </main>
     </body>
