--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <section class="quote"></section>
             <div class="cta">
             <div class="cta-text">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <p><span class="cta-header">Call to action! It is time!</span><br>Sign up for our product by clicking that button right over there!</p>
             </div>
             <div class="cta-button">
                 <button>Sign Up</button>
