created section for background for cta

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             </section>
             
             <section class="quote"></section>
+            <section class="cta-background">
             <div class="cta">
+            
             <div class="cta-text">
                 <p><span class="cta-header">Call to action! It is time!</span><br>Sign up for our product by clicking that button right over there!</p>
             </div>
@@ -28,6 +30,7 @@
                 <button>Sign Up</button>
             </div>
             </div>
+            </section>
             <section class="footer">Copyright &copy; DragnessRider 2025</section>
         </main>
     </body>
