--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
 
     <body>
         <main class="landing-page">
-            <section class="header">
+
+        <section class="header-background">
+        <div class="header">
             <div class="logo-img">Logo Image</div>
             <ul class="header-links">
                 <li><a href="/">header link one</a></li>
                 <li><a href="/">header link two</a></li>
                 <li><a href="/">header link three</a></li>
             </ul>
-            </section>
-            
-            <section class="quote"></section>
-            <section class="cta-background">
+        </div>
+        </section>
+
+        <section class="quote">
+
+        </section>
+
+        <section class="cta-background">
             <div class="cta">
-            
             <div class="cta-text">
                 <p><span class="cta-header">Call to action! It is time!</span><br>Sign up for our product by clicking that button right over there!</p>
             </div>
@@ -30,8 +35,14 @@
                 <button>Sign Up</button>
             </div>
             </div>
-            </section>
-            <section class="footer">Copyright &copy; DragnessRider 2025</section>
+        </section>
+
+        <section class="footer-background">
+            <div class="footer">
+                <span>Copyright &copy; DragnessRider 2025</span>
+            </div>
+        </section>
+
         </main>
     </body>
 
