--- a/index.html
+++ b/index.html
@@ -19,11 +19,26 @@
                 <li><a href="/">header link two</a></li>
                 <li><a href="/">header link three</a></li>
             </ul>
+        <div class="hero">
+            <p><span class="main">This website is awesome!</span><br>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
+        </div>
+        <div class="hero-button">
+            <button>Sign up</button>
+        </div>
         </div>
         </section>
 
-        <section class="quote">
+        <section class="info-background">
+            <div class="">
 
+            </div>
+        </section>
+
+        <section class="quote-background">
+            <div class="quote">
+              <blockquote>"This is an inspirational quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</blockquote>
+              <cite>-Thor, God of Thunder</cite>
+            </div>
         </section>
 
         <section class="cta-background">
