changed hero-button to hero-signup due to button class needing its own class for display:flex

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="hero">
             <p><span class="main">This website is awesome!</span><br>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
         </div>
-        <div class="hero-button">
-            <button>Sign up</button>
+        <div class="hero-signup">
+            <button class="hero-button">Sign up</button>
         </div>
         </section>
 
