--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
                 <li><a href="/">header link three </a></li>
             </ul>
         </div>
+        <section class="container1">
         <div class="hero">
             <p><span class="main">This website is awesome!</span><br>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
-        </div>
-        <div class="hero-signup">
+            <div class="hero-signup">
             <button class="hero-button">Sign up</button>
+            </div>
         </div>
+        <div class="img-placeholder">
+            <p>this is a placeholder for an image</p>
+        </div>
+        </section>
         </section>
 
         <section class="info-background">
