--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
         </section>
 
         <section class="info-background">
+            <div class="info-title">Some random information.</div>
+
+            <div class="container2">
+                <div class="info">
+                    <span class="img">Random Img</span>
+                    <div class="text">This is some subtext under an illustration or image.</div>
+                </div>
+                <div class="info">
+                    <span class="img">Random Img</span>
+                    <div class="text">This is some subtext under an illustration or image.</div>
+                </div>
+                <div class="info">
+                    <span class="img">Random Img</span>
+                    <div class="text">This is some subtext under an illustration or image.</div>
+                </div>
+                <div class="info">
+                    <span class="img">Random Img</span>
+                    <div class="text">This is some subtext under an illustration or image.</div>
+                </div>
+            </div>
         </section>
 
         <section class="quote-background">
